packages/cashc/test/compiler/ParseError/single_type_destructuring.cash
contract Test() {
    return {
        test1(string s) {
            string x, y = s.split(5);
        }
    }
}
